objects/FLODocs__Deployment_Components__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Deployment Components</relationshipLabel>
        <relationshipName>Deployment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Message__c</fullName>
        <label>Deployment Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deplyoment_Log__c</fullName>
        <label>Deplyoment Log</label>
        <referenceTo>FLODocs__Deplyoment_Log__c</referenceTo>
        <relationshipLabel>Deployment Components</relationshipLabel>
        <relationshipName>Deployment_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__Rollback_Stage__c</fullName>
        <label>Rollback Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Validation Completed</fullName>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Component</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Deployment Components Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>